--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -22,12 +22,12 @@
 			<div class="well menu">
 				<ul class="nav nav-list">
 		    	<li class="<%= on_path?(user_profile_path(@user.username)) %>">
-						<%= link_to (user_signed_in? ? 'Tu actividad' : 'Actividad'), user_profile_path(@user.username) %>
+						<%= link_to (user_signed_in? && current_user_equals(@user) ? 'Tu actividad' : 'Actividad'), user_profile_path(@user.username) %>
 					</li>
 		    	<li class="<%= on_path?(user_gear_path(@user.username)) %>">
-						<%= link_to (user_signed_in? ? 'Tu equipo' : 'Equipo'), user_gear_path(@user.username) %>
+						<%= link_to (user_signed_in? && current_user_equals(@user) ? 'Tu equipo' : 'Equipo'), user_gear_path(@user.username) %>
 					</li>
-					<% if user_signed_in? %>
+					<% if user_signed_in? && current_user_equals(@user) %>
 		    		<li class="nav-header">Configuración</li>
 						<li class="<%= on_path?(settings_profile_path) %>"><%= link_to 'Perfil', settings_profile_path %></li>
 						<li class="<%= on_path?(settings_access_path) %>"><%= link_to 'Acceso', settings_access_path %></li>
