--- a/app/views/layouts/profiles/_main_user_info.html.erb
+++ b/app/views/layouts/profiles/_main_user_info.html.erb
@@ -1,7 +1,11 @@
-<% if user_signed_in? && !current_user.picture.nil? %>
+<% if !user.picture.nil? %>
 	<div class="centered centered-text">
-		<div id="profile-image" class="circular centered centered-text" data-image-url="<%= current_user.picture.image.mini_thumb.url %>">
-			<%= link_to image_tag(current_user.picture.image.mini_thumb.url), settings_profile_path %>
+		<div id="profile-image" class="circular centered centered-text" data-image-url="<%= user.picture.image.mini_thumb.url %>">
+			<% if user.picture.nil? %>
+				<%= image_tag(user.picture.image.mini_thumb.url) %>
+			<% else %>
+				<%= link_to image_tag(user.picture.image.mini_thumb.url), settings_profile_path %>
+			<% end %>
 		</div>
 	</div>
 <% else %>
@@ -11,6 +15,8 @@
 <% end %>
 
 <div class="centered-text">
-	<h3><%= @user.username %></h3>
-	<p>Ciudad de México</p>
+	<h3><%= user.username %></h3>
+	<% unless user.city.nil? %>
+		<p><%= user.city.name %></p>
+	<% end %>
 </div>
