--- a/app/views/profiles/tips/_index.html.erb
+++ b/app/views/profiles/tips/_index.html.erb
@@ -23,7 +23,7 @@
 					<p><%= t('tips.listing.empty') %></p>
 				</div>
 			<% else %>
-					<%= render 'maps/shared/city_not_set_alert' %>
+					<%= render :partial => 'maps/shared/city_not_set_alert', :locals => { :outside_profile => (!@user.nil? && current_user_equals(@user)) } %>
 					<%= subsection_with(
 						t('user_profiles.views.tips.subsection.title.logged_out'),  
 						t('user_profiles.views.tips.subsection.title.logged_in')) %>
