--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -60,8 +60,10 @@
 			<% end %>
 		</div>
 		<div class="span6">
-			<p>Si lo deseas, puedes eliminar la imagen actual: </p>
-			<%= link_to 'Eliminar', settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
+			<% unless current_user.picture.nil? %>
+				<p>Si lo deseas, puedes eliminar la imagen actual: </p>
+				<%= link_to 'Eliminar', settings_destroy_picture_path, :method => :delete, :class => "btn btn-danger pull-right" %>
+			<% end %>
 		</div>
 	</div>
 </div>
