--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -13,7 +13,7 @@
 			</div>
 			</div>
 			<div class="row-fluid top-spaced">
-				<div class="span6"><%= link_to t('comments.actions.cancel'), 'javascript:void(0);' %></div>
+				<div class="span6"><%= link_to t('comments.actions.cancel'), 'javascript:void(0);', :class => 'clearer' %></div>
 				<div class="span6">
 					<div class="pull-right">
 						<%= f.submit t('comments.actions.comment'), :class => 'btn btn-success' %>
