--- a/app/views/layouts/profiles/_main_user_info.html.erb
+++ b/app/views/layouts/profiles/_main_user_info.html.erb
@@ -1,16 +1,13 @@
 <% if !user.picture.nil? %>
 	<div class="centered centered-text">
-		<div id="profile-image" class="circular centered centered-text" data-image-url="<%= user.picture.image.mini_thumb.url %>">
-			<% if user.picture.nil? %>
-				<%= image_tag(user.picture.image.mini_thumb.url) %>
-			<% else %>
-				<%= link_to image_tag(user.picture.image.mini_thumb.url), settings_profile_path %>
-			<% end %>
+		<div id="profile-image" class="centered centered-text">
+			<%= link_to image_tag(user.picture.image.mini_thumb.url, :size => '80x80', :class => 'circle circle-80'), settings_profile_path %>
 		</div>
 	</div>
 <% else %>
-	<div class="avatar-img centered centered-text">
-		<a href="<%= settings_profile_path %>" class="picture-file-selector"><i class="icon-user"></i></a>
+	<div class="profile-image-placeholder centered centered-text">
+		<%= link_to image_tag('/assets/empty_user_icon.png', :size => '80x80', :class => 'empty-user-icon'), settings_profile_path %>
+		<%= link_to image_tag('/assets/add_picture_user_icon.png', :size => '80x80', :class => 'add-user-icon'), settings_profile_path %>
 	</div>
 <% end %>
 
