--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,4 +1,13 @@
 <div class="container-fluid">
+	<div class="row-fluid">
+		<div class="pull-right">
+			<% if user_signed_in? %>
+				<a class='btn btn-success' href="<%= new_bike_path %>"><i class='icon icon-map-marker'></i> <%= t('bikes.actions.register') %></a>
+			<% else %>
+				<a class='btn btn-success' href="<%= new_user_session_path %>"><i class='icon icon-map-marker'></i> <%= t('bikes.actions.register') %></a>
+			<% end %>
+		</div>
+	</div>
 	<h3 class="centered-text">Bicis y más</h3>
 	<div class="separator"></div>
 	<%= render 'bikes/sub_bar'%>
