Fixed bad javascript and css's related to mini-spinner on likes views

--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -527,16 +527,15 @@ $breakdowns: #F18706;
 
 // Spinloaders
 
-#spinner {
+.spinner-container {
 	display: none;
 }
 
 .spinner-mini {
 	position:relative;
-	margin-left: 5px;
-	margin-top: 2px;
 	width:15px !important;
 	height:19px !important;
+	margin-right: 5px;
 }
 
 .blockG{
