Fixed map positioning on maps view and listing

--- a/app/views/layouts/maps.html.erb
+++ b/app/views/layouts/maps.html.erb
@@ -16,7 +16,7 @@
 	<%= render 'layouts/shared/navbar' %>
 	<div class="background-logo"></div>
 
-	<div class="content-fluid">
+	<div id="top-container" class="content-fluid">
 		<div class="row-fluid top-spaced-70">
 			<div class="span1"></div>
 			<div class="span10"><%= yield %></div>
