--- a/app/views/pictures/_uploaded.html.erb
+++ b/app/views/pictures/_uploaded.html.erb
@@ -8,7 +8,7 @@
 			<% end %>
 		<% end %>
 	</div>
-	<div class="loading rounded-5 shadow-light centered hidden">
+	<div class="loading rounded-5 shadow-light centered">
 		<div class="spinner inlined"></div>
 		<p class="inlined"><%= t('pictures.manager.messages.deleting') %></p>
 	</div>
