--- a/app/views/welcome/_details.html.erb
+++ b/app/views/welcome/_details.html.erb
@@ -1,4 +1,4 @@
-<div class="content-fluid">
+<div id="what-is" class="content-fluid margin-top">
 	<div class="row-fluid section-title">
 		<p><%= t('app.landing.sections.what_is.features') %></p>
 	</div>
