--- a/app/assets/stylesheets/plain.css.scss
+++ b/app/assets/stylesheets/plain.css.scss
@@ -16,16 +16,22 @@ body, html {
 	
 	.action-links {
 		text-align: center;
-		margin-top: 20px;
 		font-size: 15px;
+		
+		ul {
+			list-style: none;
+			li {
+				margin: 20px;
+				display: inline-block;
+			}
+		}
 	}
 	
 	h2 {
 		text-align: center;
 		color: #FF5604;
 		font-weight: normal;
-		margin-bottom: 30px;
-		font-size: 40px;
+		font-size: 30px;
 	}
 	
 	.control-label {
