--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -1,45 +1,28 @@
 <div id="section-bikes" class="show">
+	<%= render 'bikes/toolbar' %>
 	<div id="b-<%= @bike.id %>" class="bike board rounded-top-5 shadow-light centered">
 		
 		<div class="details">			
 			<div class="row-fluid">
-				<div class="pull-right">
-					<h3><%= @bike.name %></h3>					
-				</div>
-				<div class="pull-left">
-					<ul class="nav nav-pills">
-			    	<li><%= link_to t('actions.back_arrow').html_safe, back_bike_path(@bike), :class => 'back' %></li>
-						<% if current_user_owns_bike?(@bike) %>
-							<li class="active"><%= link_to t('bikes.views.show.modify'), edit_bike_path(@bike) %></li>
-						<% end %>
-			    </ul>
+				<div class="centered-text">
+					<h3><%= @bike.name %></h3>
+					<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
 				</div>
 			</div>
-			<div class="row-fluid">
-				<div class="pull-right">
-					<span class="owner">
-						<%= t('bikes.views.show.owned_by') %><%= contact_for(@bike) %>
-					</span>
-				</div>
-			</div>
+			
 			<%= render :partial => 'bikes/visible_status', :locals => {:bike => @bike } %>
 			
 		</div>
-
-		<div class="photos imageable-photos centered">
-			<%= render :partial => "bikes/pictures", :locals => {:bike => @bike } %>
-			<%= render :partial => "pictures/management_panel", :locals => {:bike => @bike} %>
-		</div>
-	
+		
 		<div class="description centered">
 			<p class="main">
 				<%= @bike.description %>
 			</p>
-			<div class="row-fluid">
-				<div class="status rounded-10 pull-right">
-					<%= render :partial => 'bikes/likes_count', :locals => {:bike => @bike } %>
-				</div>
-			</div>
+		</div>
+		
+		<div class="photos imageable-photos centered">
+			<%= render :partial => "bikes/pictures", :locals => {:bike => @bike } %>
+			<%= render :partial => "pictures/management_panel", :locals => {:bike => @bike} %>
 		</div>
 	
 		<div class="statuses centered">
