--- a/app/views/layouts/extended.html.erb
+++ b/app/views/layouts/extended.html.erb
@@ -8,6 +8,14 @@
   <%= stylesheet_link_tag  "maps", "bikes" %>
   <%= javascript_include_tag controller.controller_name %>
   <%= csrf_meta_tags %>
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=261609860582235";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
 </head>
 
 <body>
