--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -33,12 +33,8 @@
 					
 				</ul>
 				<ul class="nav pull-right">
-					<li><%= link_to t('app.landing.navbar.explore'), trips_path %></li>
-					<li>
-						<a type="button" class="orange" href="<%= new_user_session_path %>">
-							<i class="icon-user"></i> <%= t('app.landing.navbar.start') %>
-						</a>
-					</li>
+					<li><%= link_to t('app.landing.navbar.explore'), trips_path, :class => 'blue' %></li>
+					<%= render 'layouts/shared/navbar_logged_in_user' %>
         </ul>
       </div>
     </div>
@@ -46,24 +42,8 @@
 </div>
 
 <div class="row-fluid">
-	<div class="span12 centered-text logo-container">
-		<%= image_tag('landing.png') %>
-	</div>
-</div>
-<div class="row-fluid">
 	<div id="slider" class="span12 centered-text">
-		<%= image_tag('city_layers_1.png', :id => "s-1", :class => "sprite") %>
-		<%= image_tag('city_layers_2.png', :id => "s-2", :class => "sprint2 sprite") %>
-		<%= image_tag('city_layers_3.png', :id => "s-3", :class => "sprint3 sprite") %>
-		<%= image_tag('city_layers_4.png', :id => "s-4", :class => "sprint4 sprite") %>
-		<%= image_tag('city_layers_5.png', :id => "s-5", :class => "sprint5 sprite") %>
-		<%= image_tag('city_layers_6.png', :id => "s-6", :class => "sprint6 sprite") %>
-		<%= image_tag('city_layers_7.png', :id => "s-7", :class => "sprint7 sprite") %>
-		<%= image_tag('city_layers_8.png', :id => "s-8", :class => "sprint8 sprite") %>
-		<%= image_tag('city_layers_9.png', :id => "s-9", :class => "sprint9 sprite") %>
-		<%= image_tag('city_layers_10.png', :id => "s-10", :class => "sprint10 sprite") %>
-		<%= image_tag('city_layers_11.png', :id => "s-11", :class => "sprint11 sprite") %>
-		<%= image_tag('city_layers_12.png', :id => "s-12", :class => "sprint12 sprite") %>
+		<%= image_tag('ciudad-pois-bici.png', :id => "s-1", :class => "sprite") %>
 	</div>
 </div>
 
