--- a/app/views/layouts/shared/_fav_icons.html.erb
+++ b/app/views/layouts/shared/_fav_icons.html.erb
@@ -1,4 +1,4 @@
-<%= favicon_link_tag 'wikicleta_icon.ico' %>
-<%= favicon_link_tag 'wikicleta_icon-144.png', :size => '144x144', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-<%= favicon_link_tag 'wikicleta_icon-72.png', :size => '72x72', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
-<%= favicon_link_tag 'wikicleta_icon.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+<%= favicon_link_tag '/assets/wikicleta_icon.ico' %>
+<%= favicon_link_tag '/assets/wikicleta_icon-144.png', :size => '144x144', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+<%= favicon_link_tag '/assets/wikicleta_icon-72.png', :size => '72x72', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+<%= favicon_link_tag '/assets/wikicleta_icon.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
