--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -12,26 +12,10 @@
 			<%= link_to t('app.name'), root_path, :class => "brand" %>
       <div class="nav-collapse collapse">
         <ul class="nav pull-right">
-					<li><%= link_to 'Principal', root_path  %></li>
 					<li class="<%= is_section_active?('trips') %>"><%= link_to 'Pasea', trips_path  %></li>
 					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa', maps_path %></li>
 					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
-					<% if user_signed_in? %>
-						<li class="user-logged-in dropdown">
-							<%= link_to "<i class='icon-chevron-down'></i> #{current_user.username}".html_safe, '#', :class => "dropdown-toggle", "data-toggle"=>"dropdown" %>
-							<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-								<li><%= link_to 'Perfil', user_profile_path(current_user.username) %></li>
-								<li class="divider"></li>
-								<li><%= link_to 'Cerrar Sesión', destroy_user_session_path, :method => :delete %></li>
-					    </ul>
-						</li>
-					<% else %>
-						<li>
-							<a href="<%= new_user_session_path %>" class="login-link" type="button">
-								 <i class='icon-user'></i> Iniciar Sesión
-							</a>
-						</li>
-					<% end %>
+					<%= render 'layouts/shared/navbar_logged_in_user' %>
 				</ul>
       </div>
     </div>
