--- a/app/views/layouts/shared/_notice.html.erb
+++ b/app/views/layouts/shared/_notice.html.erb
@@ -1,7 +1,15 @@
 <% if flash[:notice] %>
-	<div class="alert alert-success"><%= flash[:notice] %><button class="close" data-dismiss="alert" type="button">×</button></div>	
+<div class="row-fluid">
+	<div class="span4"></div>
+	<div class="span4"><div class="alert alert-success"><%= flash[:notice] %><button class="close" data-dismiss="alert" type="button">×</button></div></div>
+	<div class="span4"></div>
+</div>
 <% end %>
 
 <% if flash[:alert] %>
-	<div class="alert alert-error"><%= flash[:alert] %><button class="close" data-dismiss="alert" type="button">×</button></div>	
+<div class="row-fluid">
+	<div class="span4"></div>
+	<div class="span4"><div class="alert alert-error"><%= flash[:alert] %><button class="close" data-dismiss="alert" type="button">×</button></div></div>
+	<div class="span4"></div>
+</div>
 <% end %>
