--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,14 +1,42 @@
-<h2>Change your password</h2>
+<div class="row-fluid top-spaced">
+	<div class="span4"></div>
+	<div class="span4 board board-login rounded-5 shadow-light">
+		<h2><%=t "devise.passwords.reset" %></h2>
+		<br/>
+		<div class="row-fluid">
+			<div class="span2"></div>
+			<div class="span10">
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
+					<%= devise_error_messages! %>
+				  <%= f.hidden_field :reset_password_token %>
+					<div class="control-group">
+			    	<label class="control-label"><i class="icon-lock"></i></label>
+			    	<div class="controls">
+							<%= f.password_field :password, :placeholder => t('devise.passwords.new_password'), :size => 32 %>		  
+			    	</div>
+					</div>
+					<div class="control-group">
+			    	<div class="controls">
+							<%= f.password_field :password_confirmation, :placeholder => t('devise.passwords.new_password_confirmation'), :size => 32 %>
+			    	</div>
+					</div>
+				
+					<div class="row-fluid">
+						<div class="span4"><%= f.submit t("actions.accept"), :class => 'btn btn-primary pull-right' %></div>
+					</div>
+				<% end %>
+			</div>
+		</div>
+	</div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Change my password" %></div>
-<% end %>
+</div>
+<div class="row-fluid">
+	<div class="span4"></div>
+	<div class="span4">
+		<br/>
+		<ul class="nav nav-pills">
+			<li class="active"><%= link_to t('actions.back_start').html_safe, root_path, :class => 'back' %></li>
+		</ul>
+	</div>
+	<div class="span4"></div>
+</div>
