Finished reviewing required assets per template. Improved UIX for promoteds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<%= stylesheet_link_tag    "bikes" %>
   <%= javascript_include_tag "bikes" %>
   <%= csrf_meta_tags %>
+	<%= render 'layouts/shared/fb' %>
 </head>
 <body>
 	
