--- a/app/views/promoteds/show.html.erb
+++ b/app/views/promoteds/show.html.erb
@@ -1,4 +1,30 @@
 <div id="section-promoteds" class="show">	
+	
+	<div class="helper-board centered">
+		<div class="row-fluid">
+			<div class="pull-right">
+				<div class="status rounded-5">
+					<%= render :partial => 'promoteds/likes_count', :locals => {:promoted => @promoted } %>
+				</div>
+			</div>
+			<div class="pull-left">
+				<ul class="nav nav-pills">
+		    	<li><%= link_to t('actions.back_arrow').html_safe, bikes_path, :class => 'back' %></li>
+		    </ul>
+			</div>
+		</div>
+		<div class="share-social row-fluid">
+			<div class="pull-right">
+				<div>
+					<a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= share_promoted_tweet @promoted %>" data-via="wikicleta" data-lang="es" data-size="large">Twittear</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+				</div>
+				<div class="fb-like" data-href="<%= bike_url(@bike) %>" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false" data-action="recommend"></div>
+
+			</div>
+		</div>
+	</div>
+	
 	<div id="p-<%= @promoted.id %>" class="promoted board rounded-top-5 shadow-light centered">
 		
 		<div class="details">			
@@ -6,11 +32,6 @@
 				<div class="pull-right">
 					<h3><%= @promoted.headline %></h3>	
 					<p class="pull-right"><%= @promoted.main_details %></p>				
-				</div>
-				<div class="pull-left">
-					<ul class="nav nav-pills">
-			    	<li><%= link_to t('actions.back_arrow').html_safe, bikes_path, :class => 'back' %></li>
-			    </ul>
 				</div>
 			</div>
 			<div class="row-fluid service-details">
@@ -39,11 +60,6 @@
 		
 		<div class="description centered">
 			<p class="main"><%= @promoted.extra_details || t('promoteds.views.show.extra_details_not_given') %></p>
-			<div class="row-fluid">
-				<div class="status rounded-10 pull-right">
-					<%= render :partial => 'promoteds/likes_count', :locals => {:promoted => @promoted } %>
-				</div>
-			</div>
 		</div>
 	
 		<div class="comments centered">
