--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -12,6 +12,9 @@
 			<%= link_to t('app.name'), root_path, :class => "brand" %>
       <div class="nav-collapse collapse">
         <ul class="nav pull-right">
+					<% unless user_signed_in? %>
+						<li><%= link_to 'Principal', root_path  %></li>
+					<% end %>
 					<li class="<%= is_section_active?('trips') %>"><%= link_to 'Pasea', trips_path  %></li>
 					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa', maps_path %></li>
 					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Más', bikes_path %></li>
