--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -12,48 +12,74 @@
 
 				<%= form_for(resource, :as => resource_name, :url => account_create_path) do |f| %>
 				  <%= devise_error_messages_for('registration') %>
-					<div class="row-fluid">
-					<div class="span5">
-						<div class="control-group">
-				    	<div class="controls">
-							  <%= f.text_field :full_name, :placeholder => t('activerecord.attributes.user.full_name') %>
-				    	</div>
-						</div>
-						
-						<div class="control-group">
-				    	<div class="controls">
-								<%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
-				    	</div>
-						</div>
-
-						<div class="control-group">
-				    	<div class="controls">
-							  <%= f.text_field :username, :placeholder => t('activerecord.attributes.user.username') %>
-				    	</div>
-						</div>
-					</div>
-					
-					
-					<div class="span7">
-						<div class="control-group">
-				    	<div class="controls">
-							  <%= f.password_field :password, :placeholder => t('activerecord.attributes.user.password') %>
-				    	</div>
-						</div>
-						
-						<div class="control-group">
-				    	<div class="controls">
-							  <%= f.password_field :password_confirmation, :placeholder => t('activerecord.attributes.user.password_confirmation') %>
-				    	</div>
-						</div>
-					</div>
-					</div>
+				
+				
 					<div class="row-fluid">
 						<div class="span1"></div>
-						<div class="span10">
+						<div class="span10 invite rounded-10">
+							<p class="title">Por ahora sólo quienes tengan un código de invitación podrán registrarse en Wikicleta</p>
+							<div class="row-fluid">
+							<div class="span2"></div>
+							<div class="span7">
+								<div class="control-group">
+						    	<div class="controls">
+										<label class="control-label"><i class="icon-envelope"></i></label>&nbsp;
+									  <%= f.text_field :invitation_code, :placeholder => "Aquí va el código de invitación" %>
+						    	</div>
+								</div>
+							</div>
+							<div class="span3"></div>
+							
+						</div>
+						<div class="span1"></div>
+					</div>
+				
+				
+					<div class="row-fluid">
+						<div class="span1"></div>
+						<div class="span5">
+							<div class="control-group">
+					    	<div class="controls">
+								  <%= f.text_field :full_name, :placeholder => t('activerecord.attributes.user.full_name') %>
+					    	</div>
+							</div>
+						
+							<div class="control-group">
+					    	<div class="controls">
+									<%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
+					    	</div>
+							</div>
+						</div>
+						<div class="span1"></div>
+					
+						<div class="span5">
+							<div class="control-group">
+					    	<div class="controls">
+								  <%= f.text_field :username, :placeholder => t('activerecord.attributes.user.username') %>
+					    	</div>
+							</div>
+							<div class="control-group">
+					    	<div class="controls">
+								  <%= f.password_field :password, :placeholder => t('activerecord.attributes.user.password') %>
+					    	</div>
+							</div>
+						
+							<div class="control-group">
+					    	<div class="controls">
+								  <%= f.password_field :password_confirmation, :placeholder => t('activerecord.attributes.user.password_confirmation') %>
+					    	</div>
+							</div>
+						</div>
+						
+					</div>
+					<div class="separator"></div>
+					<br/>
+					<div class="row-fluid">
+						<div class="span5"></div>
+						<div class="span2">
 							<%= f.submit t('user_accounts.registrations.new.commit'), :class => "btn btn-primary pull-right" %>
 						</div>
-						<div class="span1"></div>
+						<div class="span5"></div>
 					</div>
 				<% end %>
 			</div>
