--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -7,7 +7,9 @@
 	<%= stylesheet_link_tag    "landing" %>
   <%= javascript_include_tag "landing" %>
   <%= csrf_meta_tags %>
+	
 	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 <body>
 	
