--- a/app/views/layouts/maps.html.erb
+++ b/app/views/layouts/maps.html.erb
@@ -10,6 +10,7 @@
 	<%= yield :javascripts %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
 <body>
