--- a/app/views/welcome/_register.html.erb
+++ b/app/views/welcome/_register.html.erb
@@ -11,7 +11,7 @@
 				<p class="text-simple orange no-margin"><%= t('app.landing.sections.registration.access_code') %></p>
 				<p class="text-simple really-tiny no-margin"><%= t('app.landing.sections.registration.give_access_codes') %></p>
 				<br/>
-				<p><%= link_to t('actions.register'), sign_up_path, :class => 'orange-button' %></p>
+				<p><%= link_to t('actions.register'), sign_up_path, :class => 'orange-button', :id => 'sign-up' %></p>
 				<br/>
 				<p class="text-simple"><%= t('app.landing.sections.registration.call') %></p>
 				
