--- a/app/views/layouts/extended.html.erb
+++ b/app/views/layouts/extended.html.erb
@@ -9,6 +9,8 @@
   <%= javascript_include_tag controller.controller_name %>
   <%= csrf_meta_tags %>
 	<%= render 'layouts/shared/fb' %>
+	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
 <body>
