--- a/app/views/layouts/no_bar.html.erb
+++ b/app/views/layouts/no_bar.html.erb
@@ -7,6 +7,8 @@
   <%= javascript_include_tag "plain" %>
 	<%= yield(:javascripts) %>
   <%= csrf_meta_tags %>
+	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 <body>
 	
