--- a/app/views/layouts/trips.html.erb
+++ b/app/views/layouts/trips.html.erb
@@ -9,6 +9,8 @@
   <%= javascript_include_tag "trips" %>
 	<%= yield :javascripts %>
   <%= csrf_meta_tags %>
+	<%= render 'layouts/shared/fav_icons' %>
+	<%= render 'layouts/shared/mix_panel' %>
 </head>
 
 <body>
