--- a/app/views/settings/access.html.erb
+++ b/app/views/settings/access.html.erb
@@ -31,7 +31,15 @@
 				<%= form_for(@user, :url => settings_changed_path(@user), :html => { :method => :put, :class => 'form-horizontal' }) do |f| %>
 					
 					<div class="control-group">
-						<%= f.label :password, :class => "control-label" %>
+						<label class="control-label"><%= t('user_accounts.settings.sections.access.current_password') %></label>
+						<div class="controls">
+						  <%= password_field_tag :current_password %>
+						</div>
+					</div>
+					<br/>
+					<br/>
+					<div class="control-group">
+						<%= f.label :password, "Nueva contraseña", :class => "control-label" %>
 						<div class="controls">
 						  <%= f.password_field :password %>
 						</div>
@@ -44,12 +52,7 @@
 						</div>
 					</div>
 					
-					<div class="control-group">
-						<label class="control-label"><%= t('user_accounts.settings.sections.access.current_password') %></label>
-						<div class="controls">
-						  <%= password_field_tag :current_password %>
-						</div>
-					</div>
+
 
 					<div class="row">
 						<div class="pull-right">
